@startuml
skinparam shadowing false
skinparam backgroundColor white
skinparam DefaultFontSize 12

title ERD - Passione Database

entity "restaurants" as RES {
  * id : UUID [PK]
  --
  name : VARCHAR(255)
  address : TEXT
  phone : VARCHAR(20)
  email : VARCHAR(255)
  qr_code : VARCHAR(100)
  is_active : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "menus" as MEN {
  * id : UUID [PK]
  ** restaurant_id : UUID [FK]
  --
  name : VARCHAR(255)
  description : TEXT
  is_active : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "categories" as CAT {
  * id : UUID [PK]
  ** menu_id : UUID [FK]
  --
  name : VARCHAR(255)
  name_en : VARCHAR(255)
  description : TEXT
  sort_order : INTEGER
  is_active : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "dishes" as DIS {
  * id : UUID [PK]
  ** category_id : UUID [FK]
  --
  name : VARCHAR(255)
  name_en : VARCHAR(255)
  description : TEXT
  description_en : TEXT
  price : DECIMAL(10,2)
  image_url : VARCHAR(500)
  is_available : BOOLEAN
  allergens : JSON
  is_vegetarian : BOOLEAN
  is_vegan : BOOLEAN
  preparation_time : INTEGER
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "tables" as TAB {
  * id : UUID [PK]
  ** restaurant_id : UUID [FK]
  --
  table_number : VARCHAR(10)
  qr_code : VARCHAR(100)
  capacity : INTEGER
  is_active : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "users" as USR {
  * id : UUID [PK]
  ** restaurant_id : UUID [FK]
  --
  name : VARCHAR(255)
  email : VARCHAR(255)
  phone : VARCHAR(20)
  password_hash : VARCHAR(255)
  role : user_role
  is_active : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  last_login : TIMESTAMP
}

entity "visitor_sessions" as VIS {
  * id : UUID [PK]
  ** table_id : UUID [FK]
  ** restaurant_id : UUID [FK]
  --
  session_token : VARCHAR(255)
  language : VARCHAR(2)
  device_id : VARCHAR(255)
  expires_at : TIMESTAMP
  is_active : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "orders" as ORD {
  * id : UUID [PK]
  ** restaurant_id : UUID [FK]
  ** table_id : UUID [FK]
  ** session_id : UUID [FK]
  --
  table_number : VARCHAR(10)
  status : order_status
  total_amount : DECIMAL(10,2)
  comment : TEXT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  completed_at : TIMESTAMP
}

entity "order_items" as OIT {
  * id : UUID [PK]
  ** order_id : UUID [FK]
  ** dish_id : UUID [FK]
  --
  quantity : INTEGER
  price : DECIMAL(10,2)
  comment : TEXT
  created_at : TIMESTAMP
}

entity "carts" as CAR {
  * id : UUID [PK]
  ** session_id : UUID [FK]
  --
  total_amount : DECIMAL(10,2)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "cart_items" as CIT {
  * id : UUID [PK]
  ** cart_id : UUID [FK]
  ** dish_id : UUID [FK]
  --
  quantity : INTEGER
  price : DECIMAL(10,2)
  comment : TEXT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "notifications" as NOT {
  * id : UUID [PK]
  ** user_id : UUID [FK]
  ** order_id : UUID [FK]
  --
  type : notification_type
  title : VARCHAR(255)
  message : TEXT
  is_read : BOOLEAN
  created_at : TIMESTAMP
  read_at : TIMESTAMP
}

entity "events" as EVT {
  * id : UUID [PK]
  ** session_id : UUID [FK]
  --
  event_type : VARCHAR(100)
  properties : JSON
  timestamp : TIMESTAMP
  ip_address : VARCHAR(45)
}

' Relationships
RES ||--o{ MEN : "has"
MEN ||--o{ CAT : "contains"
CAT ||--o{ DIS : "contains"
RES ||--o{ TAB : "has"
RES ||--o{ USR : "manages"
RES ||--o{ VIS : "hosts"
TAB ||--o{ VIS : "has"
VIS ||--o{ ORD : "creates"
VIS ||--o{ CAR : "has"
RES ||--o{ ORD : "receives"
TAB ||--o{ ORD : "receives"
ORD ||--o{ OIT : "contains"
DIS ||--o{ OIT : "ordered_as"
DIS ||--o{ CIT : "added_as"
CAR ||--o{ CIT : "contains"
USR ||--o{ NOT : "receives"
ORD ||--o{ NOT : "triggers"
VIS ||--o{ EVT : "generates"

@enduml

